# owl-ui-removal

./: .gitignore  README.md  download_checkpoints.py  example_config.yaml  examples.py  install.sh  main.py  pyproject.toml  setup_utils.py  test_utils.py
configs/: default_config.yaml
results/: config_used.yaml
src/ui_tracker/: config.py  tracker.py
utils/: video_utils.py  visualization.py
